--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 bevy = "0.14.2"
 bevy_egui = "0.30.0"
 bevy_ecs_tilemap = "0.14.0"
+bevy-inspector-egui = "0.27.0"
+bevy_pancam = "0.14.0"
 
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
